# LNU-2025-CUDA_Newton_project

./: .gitignore  README.md
ParallelJacobian/: CMakeLists.txt  CuDssSolver.cpp  CuDssSolver.h  DataInitializer.cpp  DataInitializer.h  EditionalTools.cpp  EditionalTools.h  Equation.cpp  Equation.h  FileOperations.cpp  FileOperations.h  GPUDataInitializer.h  NewtonSolver.cpp  NewtonSolver.h  NewtonSolverCUDA.h  ParallelJacobian.sln  ParallelJacobian.vcxproj  ParallelJacobian.vcxproj.filters  config.h  draw.py  functions.cpp  functions.h  gen-version.cmake  gpu_newton_solver.csv  gpufunc.cu  kernel.cu  run.ps1  version.h.in
ParallelJacobian/Include/: CuDssSolver.h  DataInitializer.h  DataInitializerCPU.h  DataInitializerCUDA.h  DataInitializerCuDSS.h  DataInitializerMKLdss.h  DataInitializerMKLlapack.h  EditionalTools.h  Equation.h  FileOperations.h  NewtonSolver.h  NewtonSolverCPU.h  NewtonSolverCUDA.h  NewtonSolverCuDSS.h  NewtonSolverFunctions.h  NewtonSolverGPUFunctions.h  NewtonSolverMKLdss.h  NewtonSolverMKLlapack.h  config.h  gpu-monitor.h  report.h  settings.h  system-build-info.h  system-info.h
ParallelJacobian/Source/: CuDssSolver.cpp  CuDssSolver.cu  DataInitializer.cpp  DataInitializerCPU.cpp  DataInitializerCUDA.cpp  DataInitializerCuDSS.cpp  DataInitializerMKLdss.cpp  DataInitializerMKLlapack.cpp  EditionalTools.cpp  Equation.cpp  FileOperations.cpp  NewtonSolver.cpp  NewtonSolverCPU.cpp  NewtonSolverCUDA.cu  NewtonSolverCuDSS.cu  NewtonSolverFunctions.cu  NewtonSolverGPUFunctions.cu  NewtonSolverMKLdss.cpp  NewtonSolverMKLlapack.cpp  gpu-monitor.cpp  gpufunc.cu  kernel.cu  kernel2.cu  main_dim.cpp  main_spar.cpp  report.cpp  settings.cpp  system-build-info.cpp  system-info.cpp
ParallelJacobian/newton-mkl/: CMakeLists.txt  main.cpp  utils.hpp
ParallelJacobian/scripts/: build.ps1  draw.py  draw2.py  draw3.py  draw_comparison_inverse_delta.py  draw_cudss.py  draw_iterations_cudss.py  draw_memory.py  draw_total_stat.py  run.ps1  run_dimention.ps1  run_in_loop.ps1  run_sparse.ps1
